<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- About -->
    <string name="app_name">Lampshade</string>
    <string name="app_description">A TvTropes wrapper</string>
    <string name="about_copyright">Copyright © 2012 Simon Strassl\n Released under the <a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></string>
    <string name="about_links">Source code available on <a href="https://github.com/prismsw/Lampshade">Github</a>\nWebsite at <a href="http://prismsw.eu">prismsw.eu</a></string>
    
    <string name="dialog_open">Open</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_copy">Copy</string>
    
    <!-- Activty titles -->
    <string name="title_saved">Saved</string>
    <string name="title_recent">Recent</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_about">About</string>
    <string name="title_help">Help</string>
    <string name="title_preferences">Preferences</string>
	<string name="title_search">Search:&#160;</string>
    
    <!-- Main Activity -->
	<string name="et_search">Search</string>
	<string name="btn_load">Go!</string>
	<string name="btn_random">Random</string>
	<string name="btn_tropes">Tropes</string>
	<string name="show_saved_articles">Saved</string>
	<string name="show_about">About</string>
	<string name="show_help">Help</string>
	<string name="show_recent">Recent</string>
	<string name="show_favorites">Favorites</string>
	<string name="show_preferences">Preferences</string>
	
	<!-- Misc -->
	<string name="not_used">Here there be dragons!</string>
	
	<string name="dialog_dismiss">Dismiss</string>
	<string name="dialog_reload">Reload</string>
	<string name="dialog_error">Error</string>
	<string name="dialog_close">Close</string>
	<string name="dialog_article_loading">Loading article…</string>
	<string name="dialog_search_loading">Loading search results…</string>
	<string name="dialog_load_failed_title">Error</string>
	<string name="dialog_load_failed_message">Could not load the page. Do you want to reload it?</string>
	
	<!-- Article Activity -->
	<string name="article_title">Title</string>
	<string name="article_content">Content</string>
	<string name="article_refresh">Refresh</string>
	<string name="article_remove">Remove article</string>
	<string name="article_save">Save</string>
	<string name="article_favorite">Favorite</string>
	<string name="article_unfavorite">Un-favorite</string>
	<string name="article_info">Info</string>
	<string name="article_browser">Show in browser</string>
	<string name="article_clipboard">Copy to clipboard</string>
	<string name="article_subpages">Subpages</string>
	<string name="article_share">Share</string>
	<string name="article_action_save">Save</string>
	
	<string name="article_removed">Removed&#160;</string>
	<string name="article_remove_failed">Could not remove this link</string>
	<string name="article_saved">Added&#160;</string>
	<string name="article_save_failed">Could not add this link (not a tvtropes link?)</string>
	<string name="article_clipboard_copied">Copied&#160;</string>
	
	<!-- Saved Articles Activity -->
	<string name="saved_action_delete">Delete</string>
	
	<!-- Article Fragment -->
	<string name="article_find">Find</string>
	<string name="article_show_spoilers">Toggle spoilers</string>
	
	<!-- Index Fragment -->
	<string name="index_as_article">Show article</string>
	
	<!-- Preferences -->
	<string name="preference_category_visual">Visual</string>
	<string name="preference_category_functionality">Functionality</string>
	
	<string name="preference_theme_title">Theme</string>
	<string name="preference_theme_summary">Requires an application restart</string>
	<string-array name="preference_theme_entries">
		<item name="HoloLight">Holo Light</item>
		<item name="HoloDark">Holo Dark</item>
	</string-array>
	<string-array name="preference_theme_values">
		<item name="HoloLight">HoloLight</item>
		<item name="HoloDark">HoloDark</item>
	</string-array>
	
	<string name="preference_font_size_title">Font size</string>
	<string name="preference_font_size_summary">Set the font size for articles</string>
	
	<string name="preference_spoiler_hover_title">Spoiler on hover</string>
	<string name="preference_spoiler_hover_summary">Toggle the visibility of spoilers by hovering over them</string>
	
	<string name="preference_history_enable_title">Enable history</string>
	<string name="preference_history_enable_summary">If this is unchecked, the articles you visit will not show up in your recent articles</string>
</resources>