<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/refresh_article"
          android:icon="@drawable/ic_menu_refresh_light"
    	  android:title="@string/article_refresh"
    	  android:showAsAction="always"
	/>
    <item android:id="@+id/save_article"
          android:icon="@drawable/ic_menu_save_light"
    	  android:title="@string/article_save"
    	  android:showAsAction="never"
	/>
    <item android:id="@+id/info_article"
    	  android:title="@string/article_info"
    	  android:showAsAction="never"
	/>
    <item android:id="@+id/subpages_article"
          android:title="@string/article_subpages"
          android:showAsAction="never"
    />
    <item android:id="@+id/browser_article"
          android:title="@string/article_browser"
          android:showAsAction="never"
    />
    <item android:id="@+id/clipboard_article"
          android:title="@string/article_clipboard"
          android:showAsAction="never"
    />
    <item android:id="@+id/share_article"
    	  android:title="@string/article_share"
    	  android:showAsAction="never"
    	  android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider"
	/>  
</menu>