<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lampshade="http://schemas.android.com/apk/res/eu.prismsw.lampshade">
    
    <PreferenceCategory
        android:title="@string/preference_category_visual">
        
        <ListPreference
            android:key="preference_theme"
            android:title="@string/preference_theme_title"
            android:summary="@string/preference_theme_summary"
            android:entries="@array/preference_theme_entries"
            android:entryValues="@array/preference_theme_values"
            android:dialogTitle="@string/preference_theme_title"
            android:defaultValue="HoloLight" />
        
        <eu.prismsw.preferences.SeekBarPreference
            android:key="preference_font_size"
            android:title="@string/preference_font_size_title"
            android:summary="@string/preference_font_size_summary"
            lampshade:minValue="8"
            android:defaultValue="12"
            lampshade:maxValue="20"
            lampshade:units="pt" />
            
        
    </PreferenceCategory>
</PreferenceScreen>