<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_page" />

    <EditText
        android:id="@+id/et_enter_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_load" 
        android:onClick="clickHandler"/>

    <Button
        android:id="@+id/btn_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_random"
        android:onClick="clickHandler" />
    
    <Button
        android:id="@+id/btn_tropes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_tropes"
        android:onClick="clickHandler" />	
</LinearLayout>