<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/et_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_search"/>

        <Button
            android:id="@+id/btn_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="clickHandler"
            android:text="@string/btn_load" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="100dp" >

            <Button
                android:id="@+id/btn_tropes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_tropes"
                android:onClick="clickHandler" />

            <TextView
                android:id="@+id/tv_tropes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/btn_tropes" />
        </LinearLayout>
        
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_random"
                android:onClick="clickHandler" />

            <TextView
                android:id="@+id/tv_random"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/btn_random" />
        </LinearLayout>


    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_saved"
                android:onClick="clickHandler" />

            <TextView
                android:id="@+id/tv_saved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/show_saved_articles" />
        </LinearLayout>
        
    </LinearLayout>
	
</LinearLayout>